[gd_scene load_steps=23 format=3 uid="uid://darbo0x41j3wt"]

[ext_resource type="Shader" path="res://assets/shaders/Grid.gdshader" id="1_j5esh"]
[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="1_u02ow"]
[ext_resource type="Script" path="res://panels/NewVirtualFixtures/NewVirtualFixtures.gd" id="2_2570m"]
[ext_resource type="Script" path="res://panels/NewVirtualFixtures/FixtureContainer.gd" id="3_17xci"]
[ext_resource type="Texture2D" uid="uid://bt7w4l5chxmnr" path="res://assets/icons/ZoomIn.svg" id="3_roei7"]
[ext_resource type="Texture2D" uid="uid://ce4pstyb2a81e" path="res://assets/icons/ZoomAll.svg" id="4_akhaa"]
[ext_resource type="Texture2D" uid="uid://ds5mmj3a0ukl4" path="res://assets/icons/FixtureGroup.svg" id="5_aj5y2"]
[ext_resource type="Texture2D" uid="uid://cyu6w28aucjer" path="res://assets/icons/ZoomOut.svg" id="5_ngn11"]
[ext_resource type="Texture2D" uid="uid://dp8vkenjk120x" path="res://assets/icons/GridOff.svg" id="6_oqfc6"]
[ext_resource type="Texture2D" uid="uid://bbennjke0ioen" path="res://assets/icons/Add.svg" id="7_s3l1u"]
[ext_resource type="Texture2D" uid="uid://x6jujyxw4f8r" path="res://assets/icons/remove.svg" id="8_wyeuq"]
[ext_resource type="Texture2D" uid="uid://be3tq05v1ne7n" path="res://assets/icons/Horizontal_distribute.svg" id="9_6yhsp"]
[ext_resource type="Texture2D" uid="uid://rqf8w11gk6ud" path="res://assets/icons/Edit.svg" id="9_s4hab"]
[ext_resource type="Texture2D" uid="uid://b45woehlhukgj" path="res://assets/icons/Download.svg" id="10_1mwe2"]
[ext_resource type="Texture2D" uid="uid://c6xnsmttojanx" path="res://assets/icons/Settings.svg" id="10_e48gl"]
[ext_resource type="Texture2D" uid="uid://bn4jkekidjyne" path="res://assets/icons/Vertical_distribute.svg" id="10_onhru"]
[ext_resource type="Texture2D" uid="uid://vm1u4mv102e3" path="res://assets/icons/Dot_Grid.svg" id="11_rw234"]
[ext_resource type="Texture2D" uid="uid://bqdebneaw8anq" path="res://assets/icons/ResizeAlt.svg" id="15_twgj0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qxspt"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.10748, 0.10748, 0.10748, 1)
border_color = Color(0.309804, 0.309804, 0.309804, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_10tdw"]
shader = ExtResource("1_j5esh")
shader_parameter/size = Vector2(3840, 2160)
shader_parameter/line_width = 0.084
shader_parameter/offset = Vector2(0, 0)
shader_parameter/grid_size = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a7r8u"]
bg_color = Color(0, 0.513726, 1, 0.364706)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 4
corner_radius_top_right = 3
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pkwr7"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.205117, 0.205117, 0.205117, 1)
border_color = Color(0.309804, 0.309804, 0.309804, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="VirtualFixtures" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_u02ow")
script = ExtResource("2_2570m")

[node name="Table" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_qxspt")

[node name="RealScroll" type="ScrollContainer" parent="Table"]
layout_mode = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="ScrollSize" type="Control" parent="Table/RealScroll"]
custom_minimum_size = Vector2(3840, 2160)
layout_mode = 2

[node name="FixtureContainer" type="Control" parent="Table/RealScroll/ScrollSize" node_paths=PackedStringArray("_virtual_fixtures_root")]
clip_children = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("3_17xci")
_virtual_fixtures_root = NodePath("../../../..")

[node name="Grid" type="ColorRect" parent="Table/RealScroll/ScrollSize/FixtureContainer"]
material = SubResource("ShaderMaterial_10tdw")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
mouse_filter = 2
color = Color(0.0728426, 0.0728427, 0.0728425, 1)

[node name="SelectBox" type="PanelContainer" parent="Table/RealScroll/ScrollSize/FixtureContainer"]
visible = false
layout_mode = 0
offset_right = 267.0
offset_bottom = 257.0
theme_override_styles/panel = SubResource("StyleBoxFlat_a7r8u")

[node name="TitleBar" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
anchor_right = 1.0
offset_left = 6.0
offset_top = 5.0
offset_right = -6.0
offset_bottom = 64.0
grow_horizontal = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_pkwr7")

[node name="HBoxContainer" type="HBoxContainer" parent="TitleBar"]
layout_mode = 2

[node name="FixtureGroupName" type="Button" parent="TitleBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Fixture Group"
icon = ExtResource("5_aj5y2")
flat = true

[node name="Zoom Controls" type="PanelContainer" parent="TitleBar/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="TitleBar/HBoxContainer/Zoom Controls"]
layout_mode = 2

[node name="ZoomIn" type="Button" parent="TitleBar/HBoxContainer/Zoom Controls/HBoxContainer"]
layout_mode = 2
tooltip_text = "Zoom In"
icon = ExtResource("3_roei7")

[node name="ZoomAll" type="Button" parent="TitleBar/HBoxContainer/Zoom Controls/HBoxContainer"]
layout_mode = 2
tooltip_text = "Center Zoom"
icon = ExtResource("4_akhaa")

[node name="ZoomOut" type="Button" parent="TitleBar/HBoxContainer/Zoom Controls/HBoxContainer"]
layout_mode = 2
tooltip_text = "Zoom Out"
icon = ExtResource("5_ngn11")

[node name="VSeparator" type="VSeparator" parent="TitleBar/HBoxContainer"]
visible = false
layout_mode = 2

[node name="GridControls" type="PanelContainer" parent="TitleBar/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="TitleBar/HBoxContainer/GridControls"]
layout_mode = 2

[node name="ShowGrid" type="Button" parent="TitleBar/HBoxContainer/GridControls/HBoxContainer"]
layout_mode = 2
tooltip_text = "Toggle Grid"
toggle_mode = true
icon = ExtResource("6_oqfc6")

[node name="GridSize" type="SpinBox" parent="TitleBar/HBoxContainer/GridControls/HBoxContainer"]
layout_mode = 2
tooltip_text = "Snapping Distance"
value = 20.0

[node name="VSeparator2" type="VSeparator" parent="TitleBar/HBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="TitleBar/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="TitleBar/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="AddFixtures" type="Button" parent="TitleBar/HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Add Fixtures"
icon = ExtResource("7_s3l1u")

[node name="Import" type="Button" parent="TitleBar/HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Import Selected Fixtures"
disabled = true
icon = ExtResource("10_1mwe2")

[node name="RemoveFixtures" type="Button" parent="TitleBar/HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Remove Selected Fixtures"
disabled = true
icon = ExtResource("8_wyeuq")

[node name="VSeparator3" type="VSeparator" parent="TitleBar/HBoxContainer"]
layout_mode = 2

[node name="AlignControls" type="PanelContainer" parent="TitleBar/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="TitleBar/HBoxContainer/AlignControls"]
layout_mode = 2

[node name="HorizontalAlign" type="Button" parent="TitleBar/HBoxContainer/AlignControls/HBoxContainer"]
layout_mode = 2
tooltip_text = "Horizontal Align Selection"
disabled = true
icon = ExtResource("9_6yhsp")

[node name="VerticalAlign" type="Button" parent="TitleBar/HBoxContainer/AlignControls/HBoxContainer"]
layout_mode = 2
tooltip_text = "Vertical Align Selection"
disabled = true
icon = ExtResource("10_onhru")

[node name="GridAlign" type="Button" parent="TitleBar/HBoxContainer/AlignControls/HBoxContainer"]
layout_mode = 2
tooltip_text = "Grid Align Selection"
disabled = true
icon = ExtResource("11_rw234")

[node name="EditControls" type="PanelContainer" parent="TitleBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="TitleBar/HBoxContainer/EditControls"]
layout_mode = 2

[node name="EditMode" type="Button" parent="TitleBar/HBoxContainer/EditControls/HBoxContainer"]
layout_mode = 2
tooltip_text = "Toggle Edit Mode"
disabled = true
toggle_mode = true
icon = ExtResource("9_s4hab")

[node name="Settings" type="Button" parent="TitleBar/HBoxContainer/EditControls/HBoxContainer"]
layout_mode = 2
tooltip_text = "Open Settings"
icon = ExtResource("10_e48gl")

[node name="MoveResize" type="TextureRect" parent="TitleBar/HBoxContainer/EditControls/HBoxContainer"]
modulate = Color(0.255659, 0.255659, 0.255659, 1)
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
tooltip_text = "Move & Resize"
mouse_filter = 0
mouse_default_cursor_shape = 13
texture = ExtResource("15_twgj0")
expand_mode = 4
stretch_mode = 5

[node name="DummyScroll" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 80.0
offset_right = -11.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ScrollSize" type="Control" parent="DummyScroll"]
custom_minimum_size = Vector2(3840, 2160)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="GridAlignSize" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -104.0
offset_top = 69.0
offset_right = 104.0
offset_bottom = 118.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pkwr7")
metadata/_edit_group_ = true

[node name="VBoxContainer" type="HBoxContainer" parent="GridAlignSize"]
layout_mode = 2

[node name="Label3" type="Label" parent="GridAlignSize/VBoxContainer"]
layout_mode = 2
text = "Grid Width:"

[node name="GridWidth" type="SpinBox" parent="GridAlignSize/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
min_value = 1.0
max_value = 9.22337e+18
value = 1.0
update_on_text_changed = true

[connection signal="gui_input" from="Table/RealScroll/ScrollSize/FixtureContainer" to="." method="_on_fixture_container_gui_input"]
[connection signal="gui_input" from="Table/RealScroll/ScrollSize/FixtureContainer" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_gui_input"]
[connection signal="pressed" from="TitleBar/HBoxContainer/FixtureGroupName" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_fixture_group_name_pressed"]
[connection signal="pressed" from="TitleBar/HBoxContainer/Zoom Controls/HBoxContainer/ZoomIn" to="." method="_on_zoom_in_pressed"]
[connection signal="pressed" from="TitleBar/HBoxContainer/Zoom Controls/HBoxContainer/ZoomOut" to="." method="_on_zoom_out_pressed"]
[connection signal="toggled" from="TitleBar/HBoxContainer/GridControls/HBoxContainer/ShowGrid" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_show_grid_toggled"]
[connection signal="value_changed" from="TitleBar/HBoxContainer/GridControls/HBoxContainer/GridSize" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_grid_size_value_changed"]
[connection signal="pressed" from="TitleBar/HBoxContainer/PanelContainer/HBoxContainer/AddFixtures" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_add_fixtures_pressed"]
[connection signal="pressed" from="TitleBar/HBoxContainer/PanelContainer/HBoxContainer/Import" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_import_pressed"]
[connection signal="pressed" from="TitleBar/HBoxContainer/AlignControls/HBoxContainer/HorizontalAlign" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_horizontal_align_pressed"]
[connection signal="pressed" from="TitleBar/HBoxContainer/AlignControls/HBoxContainer/VerticalAlign" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_vertical_align_pressed"]
[connection signal="pressed" from="TitleBar/HBoxContainer/AlignControls/HBoxContainer/GridAlign" to="." method="_on_grid_align_pressed"]
[connection signal="pressed" from="TitleBar/HBoxContainer/AlignControls/HBoxContainer/GridAlign" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_grid_align_pressed"]
[connection signal="pressed" from="TitleBar/HBoxContainer/EditControls/HBoxContainer/EditMode" to="." method="_on_edit_mode_pressed"]
[connection signal="value_changed" from="GridAlignSize/VBoxContainer/GridWidth" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_grid_width_value_changed"]
